Update Exp 8- deploy.yml

--- a/Exp 8- deploy.yml
+++ b/Exp 8- deploy.yml
@@ -4,9 +4,9 @@
   tasks:
    - name: Copy the artifact to target location
      become: true
-     become_user: student
+     become_user: external
      become_method: su
      copy:
        src: "/var/lib/jenkins/workspace/HelloMaven/target/my-app-1.0-SNAPSHOT.jar"
-       dest: "/home/student/P8/t.jar"
+       dest: "/home/external/P8/t.jar"
        
