--- a/Exp 8- deploy.yml
+++ b/Exp 8- deploy.yml
@@ -4,7 +4,7 @@
   tasks:
    - name: Copy the artifact to target location
      become: true
-     become_user: external
+     become_user: externals
      become_method: su
      copy:
        src: "/var/lib/jenkins/workspace/HelloMaven/target/my-app-1.0-SNAPSHOT.jar"
